--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <th>Informações adicionais</th>
     </tr>
     <tr>
-        <td>Lancaster</td>
+        <td>Fausto</td>
         <td>25</td>
         <td>Sou estudante</td>
     </tr>
